v3.3.0/_sources/generated/generated/pcdsdevices.epics_motor.PMC100.rst.txt
pcdsdevices.epics\_motor.PMC100
===============================

.. currentmodule:: pcdsdevices.epics_motor

.. autoclass:: PMC100

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  user_readback
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.RBV``
          -  
          -  hinted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  user_setpoint
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VAL``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  user_offset
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.OFF``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  user_offset_dir
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DIR``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  offset_freeze_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.FOFF``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  set_use_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SET``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  velocity
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.VELO``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  acceleration
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.ACCL``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_egu
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.EGU``
          -  
          -  config
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_is_moving
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.MOVN``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_done_move
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DMOV``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  high_limit_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HLS``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  low_limit_switch
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.LLS``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  high_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.HLM``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  low_limit_travel
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.LLM``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  direction_of_travel
          -  :class:`~ophyd.signal.Signal`
          -  
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_stop
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.STOP``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  home_forward
          -  :class:`~ophyd.signal.Signal`
          -  
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  home_reverse
          -  :class:`~ophyd.signal.Signal`
          -  
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  disabled
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DISP``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  description
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.DESC``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  dial_position
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``.DRBV``
          -  
          -  normal
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   
       *  -  motor_spg
          -  :class:`~ophyd.signal.EpicsSignal`
          -  ``.SPG``
          -  
          -  omitted
          -  Inherited from :class:`~pcdsdevices.epics_motor.PCDSMotorBase`
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~PMC100.camonitor
       ~PMC100.check_limit_switches
       ~PMC100.configure
       ~PMC100.describe
       ~PMC100.disable
       ~PMC100.enable
       ~PMC100.end_monitor_thread
       ~PMC100.get
       ~PMC100.get_lim
       ~PMC100.home
       ~PMC100.move
       ~PMC100.mv
       ~PMC100.mv_ginput
       ~PMC100.mvr
       ~PMC100.read
       ~PMC100.read_configuration
       ~PMC100.screen
       ~PMC100.set
       ~PMC100.set_current_position
       ~PMC100.set_lim
       ~PMC100.spg_go
       ~PMC100.spg_pause
       ~PMC100.spg_stop
       ~PMC100.stop
       ~PMC100.summary
       ~PMC100.trigger
       ~PMC100.tweak
       ~PMC100.umv
       ~PMC100.umvr
       ~PMC100.wait
       ~PMC100.wm
       ~PMC100.wm_update
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~PMC100.configuration_attrs
       ~PMC100.connected
       ~PMC100.egu
       ~PMC100.high_limit
       ~PMC100.hints
       ~PMC100.kind
       ~PMC100.limits
       ~PMC100.low_limit
       ~PMC100.moving
       ~PMC100.position
       ~PMC100.precision
       ~PMC100.presets
       ~PMC100.settle_time
       ~PMC100.timeout
       ~PMC100.tolerated_alarm
    
    